[package]
name = "ap"
version = "0.1.0"
authors = [ "Sauyon Lee <s@uyon.co>", "Samuel Hindmarch <samuel.hindmarch@keble.ox.ac.uk" ]
build = "build.rs"

[dependencies]
rand = "0.3"
hyper = "0.10"
protobuf = "1.2"
untrusted = "0.5"
ring = "0.8"
openssl = "0.9"
toml = "0.4"
base64 = "0.5"
get_if_addrs = "0.4"
#wpactrl = "0.1.0"
