name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , ProtoBuf
                     , Vault
                     , Number
                     , Models
                     , Cryptography
                     , Verification
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , protobuf == 0.3.0.0
                     , text
                     , bytestring
                     , cereal
                     , type-level
                     , pretty
                     , http-media
                     , hex
                     , servant
                     , servant-docs
                     , servant-server
                     , wai
                     , wai-logger
                     , warp
                     , containers
                     , unordered-containers
                     , binary
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , monad-logger
                     , string-conversions
                     , cryptonite
                     , asn1-parse
                     , asn1-types
                     , asn1-encoding
                     , pem
                     , memory
  default-language:    Haskell2010

executable server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , protobuf == 0.3.0.0
                     , server
  default-language:    Haskell2010

executable apidocs
  hs-source-dirs:      doc
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
                     , servant-server
                     , servant-docs
                     , protobuf == 0.3.0.0
                     , text
                     , lens
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , protobuf
                     , server
                     , hspec
                     , hspec-wai
                     , hspec-expectations
                     , persistent
                     , persistent-sqlite
                     , servant-server
                     , bytestring
                     , monad-logger
                     , http-types
                     , hex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
